[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx-beam-search-toolkit"
version = "0.1.0"
description = "Model-agnostic ONNX beam-search graph exporter and runtime"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "onnx",
    "onnxruntime",
    "torch",
]

[project.scripts]
onnx-beam-export = "onnx_beam_search.cli_export:main"
onnx-beam-run = "onnx_beam_search.cli_run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["onnx_beam_search*"]